# homeautomation-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  cellar.service  homeautomation-rust.service
.cargo/: config
cpp/: .gitignore  main.cpp
cpp/modbus/: CMakeLists.txt
cpp/reference/: CMakeLists.txt  Makefile  conanfile.txt
cpp/reference/src/: CMakeLists.txt  ground.cpp
cpp/reference/src/components/: CMakeLists.txt
cpp/reference/src/system/: CMakeLists.txt  i2c_bus.hpp  i2c_dev.hpp
etc/init.d/: cellar
python/: kmtronic.py  main.py  reset.sh
src/: main.rs
