[package]
name = "homeautomation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rpoisel/homeautomation-rust"
homepage = "https://github.com/rpoisel/homeautomation-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio-serial = { version = "5.4" }
tokio = { version = "1.15.0", features = ["full"] }
libc = "0.2"
bitflags = "1.3"
byteorder = "1"
nix = "0.23"
docopt = "1"
i2cdev = "0.5.1"

[dev-dependencies]